--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -17,7 +18,6 @@
     "react-google-fonts": "^1.2.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
-  
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
