--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "prism-react-renderer": "^2.3.1",
@@ -18,8 +19,12 @@
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-scroll": "^1.9.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "sweetalert2": "^11.11.0",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
