--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-google-fonts": "^1.2.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
